2007-07-23  Akim Demaille  <akim@epita.fr>

	Use hevea more like we use tex itself, no longer as a tool
	that does everything magically.
	* util/texi2dvi (run_hevea): Remove trailing spaces in the
	output.
	(run_tex_suite): Change to the working directory here, no longer
	in...
	(run_core_conversion): here, so that even when running hevea where
	are in the working directory.
	No longer call cd_orig, do it...
	(run_tex_suite): here.
	(run_hevea): Pass verbose flags to it when --debug.
	(run_tex_suite): Since we now want to run the whole suite of tools,
	including bibtex, with hevea, use run_core_conversion, not
	run_tex.
	(run_core_conversion): Now call run_tex.

2007-07-15  Karl Berry  <karl@gnu.org>

	* doc/info-stnd.texi (@copying, GFDL): remove, since it's
	not part of info.texi either.
	(Invoking Info): mention customization here and elsewhere,
	to make it a bit more prominent.

2007-07-15  Oleg Katsitadze  <olegkat@gmail.com>

	* doc/texinfo.tex (\quotedblleft, \quotedblright, \quoteleft,
        \quoteright): aliases for the quotation marks from the CM fonts.
	(\guillemetleft, \guillemotleft, \guillemetright, \guillemotright,
	 \guilsinglleft, \guilsinglright, \quotedblbase, \quotesinglbase):
	 new macros to borrow quotation marks from the EC fonts.  The
	 following font macros support these glyphs.
	(\ecfont): new macro to switch to a EC font as close as possible
	 to the current style.
	(\textecsize, \smallecsize, \smallerecsize, titleecsize, \chapecsize,
	 \sececsize, \ssececsize, \reducedecsize): new macros to store EC
	 font name sizes.
	* makeinfo/cmds.c, makeinfo/cmds.h: added defs for the new
	quotation marks.
	* makeinfo/lang.c (cm_special_char): added guillemetleft,
	guillemotleft, guillemetright, guillemotright.
	* util/texinfo.dtd (lsquo, rsquo, sbquo, bdquo, laquo, raquo,
	 lsaquo, rsaquo): entities for the new quotation marks.
	* doc/texinfo.txi (Inserting Quotation Marks): new section.