@@ -1,5 +1,14 @@
 2007-07-23  Akim Demaille  <akim@epita.fr>
 
+	* util/texi2dvi: Update DVIPSHEADERS so that dvips finds its
+        special headers.
+	Don't rely on non-IFS splitting when using local.
+        Maybe we should just not use local at all.
+        Or never use it to assign at the same time: declare, then assign.
+	* util/local.test: Check that "local" is used properly with quotes.
+
+2007-07-23  Akim Demaille  <akim@epita.fr>
+
 	Use hevea more like we use tex itself, no longer as a tool
 	that does everything magically.
 	* util/texi2dvi (run_hevea): Remove trailing spaces in the
